chore: dimensions update

--- a/crates/router/src/services/email/assets/api_key_expiry_reminder.html
+++ b/crates/router/src/services/email/assets/api_key_expiry_reminder.html
@@ -116,7 +116,7 @@
                 <td
                   style="
                     font-size: 12px;
-                    line-height: 14.52px;
+                    line-height: 1rem;
                     font-weight: 400;
                     color: #111326b2;
                   "
