--- a/crates/router/src/services/email/assets/invite.html
+++ b/crates/router/src/services/email/assets/invite.html
@@ -83,7 +83,7 @@
                     width: 50%;
                     font-size: 1.02rem;
                     font-weight: 400;
-                    line-height: 1rem;
+                    line-height: 1.2rem;
                     min-width: 300px;
                   "
                 >
@@ -118,12 +118,13 @@
                         font-size: 1.02rem;
                         color: #ffffff;
                         font-weight: 500;
-                        line-height: 24.64px;
+                        line-height: 1.5rem;
                         width: 50%;
                         padding: 0.9rem 2rem;
                         background: #0070ff;
                         min-width: 18rem;
                         max-width: 25rem;
+                        cursor: pointer;
                       "
                     >
                       Click here to join
@@ -141,7 +142,7 @@
                     width: 50%;
                     font-size: 1.02rem;
                     font-weight: 400;
-                    line-height: 1rem;
+                    line-height: 1.2rem;
                     min-width: 300px;
                   "
                 >
@@ -170,7 +171,7 @@
                 <td
                   style="
                     font-size: 12px;
-                    line-height: 14.52px;
+                    line-height: 1rem;
                     font-weight: 400;
                     color: #111326b2;
                   "
