--- a/crates/router/src/services/email/assets/magic_link.html
+++ b/crates/router/src/services/email/assets/magic_link.html
@@ -83,7 +83,7 @@
                     width: 50%;
                     font-size: 1.02rem;
                     font-weight: 400;
-                    line-height: 1rem;
+                    line-height: 1.2rem;
                     min-width: 300px;
                   "
                 >
@@ -104,34 +104,6 @@
                   </table>
                 </td>
               </tr>
-              <!-- <tr>
-                <td
-                  style="
-                    color: #666666;
-                    font-size: 1rem;
-                    font-weight: 400;
-                    line-height: 1rem;
-                    min-width: 450px;
-                  "
-                >
-                  <table
-                    style="
-                      width: 50%;
-                      min-width: 350px;
-                      text-align: center;
-                      margin: auto;
-                    "
-                  >
-                  
-                    <tr>
-                      <td>
-                        Confirm your email address to complete your registration
-                        by clicking the button below.
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-              </tr> -->
               <tr>
                 <td style="height: 10px"></td>
               </tr>
@@ -145,12 +117,13 @@
                         font-size: 1.02rem;
                         color: #ffffff;
                         font-weight: 500;
-                        line-height: 24.64px;
+                        line-height: 1.5rem;
                         width: 50%;
                         padding: 0.9rem 2rem;
                         background: #0070ff;
                         min-width: 18rem;
                         max-width: 25rem;
+                        cursor: pointer;
                       "
                     >
                       Unlock Hyperswitch
@@ -168,7 +141,7 @@
                     width: 50%;
                     font-size: 1.02rem;
                     font-weight: 400;
-                    line-height: 1rem;
+                    line-height: 1.2rem;
                     min-width: 300px;
                   "
                 >
@@ -197,7 +170,7 @@
                 <td
                   style="
                     font-size: 12px;
-                    line-height: 14.52px;
+                    line-height: 1rem;
                     font-weight: 400;
                     color: #111326b2;
                   "
