--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -82,7 +82,7 @@
                     color: #666666;
                     font-size: 1.02rem;
                     font-weight: 400;
-                    line-height: 1rem;
+                    line-height: 1.2rem;
                     min-width: 450px;
                   "
                 >
@@ -116,11 +116,12 @@
                         font-size: 1.02rem;
                         color: #ffffff;
                         font-weight: 500;
-                        line-height: 24.64px;
+                        line-height: 1.5rem;
                         width: 55%;
                         padding: 0.9rem 2rem;
                         background: #0070ff;
                         min-width: 18rem;
+                        cursor: pointer;
                       "
                     >
                       Confirm your email address
@@ -135,7 +136,7 @@
                 <td
                   style="
                     font-size: 12px;
-                    line-height: 14.52px;
+                    line-height: 1rem;
                     font-weight: 400;
                     color: #111326b2;
                   "
