chore: removing tenants change

--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Welcome to {tenantName}!</title>
+    <title>Welcome to HyperSwitch!</title>
   </head>
   <body
     style="
@@ -70,7 +70,7 @@
                     min-width: 500px;
                   "
                 >
-                  Thanks for signing up with {tenantName}!
+                  Thanks for signing up with HyperSwitch!
                 </td>
               </tr>
               <tr>
