chore: updated the css for ses compatibility

--- a/crates/router/src/services/email/assets/invite.html
+++ b/crates/router/src/services/email/assets/invite.html
@@ -106,34 +106,34 @@
                 </td>
               </tr>
               <tr>
-                <td style="height: 10px"></td>
+                <td style="height: 20px"></td>
               </tr>
               <tr>
                 <td>
-                  <a href="{link}">
-                    <button
-                      style="
-                        border: none;
-                        border-radius: 64px;
-                        font-size: 1.02rem;
-                        color: #ffffff;
-                        font-weight: 500;
-                        line-height: 1.5rem;
-                        width: 50%;
-                        padding: 0.9rem 2rem;
-                        background: #0070ff;
-                        min-width: 18rem;
-                        max-width: 25rem;
-                        cursor: pointer;
-                      "
-                    >
-                      Click here to join
-                    </button>
+                  <a
+                    href="{link}"
+                    style="
+                      text-decoration: none;
+                      border: none;
+                      border-radius: 64px;
+                      font-size: 1.02rem;
+                      color: #ffffff;
+                      font-weight: 500;
+                      line-height: 1.5rem;
+                      width: 50%;
+                      padding: 0.9rem 4rem;
+                      background: #0070ff;
+                      min-width: 18rem;
+                      max-width: 25rem;
+                      cursor: pointer;
+                    "
+                  >
+                    Click here to join
                   </a>
                 </td>
               </tr>
               <tr>
-                <td style="height: 10px"></td>
+                <td style="height: 20px"></td>
               </tr>
               <tr>
                 <td
