--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -104,28 +104,27 @@
                 </td>
               </tr>
               <tr>
-                <td style="height: 20px"></td>
+                <td style="height: 30px"></td>
               </tr>
               <tr>
                 <td>
-                  <a href="{link}">
-                    <button
-                      style="
-                        border: none;
-                        border-radius: 64px;
-                        font-size: 1.02rem;
-                        color: #ffffff;
-                        font-weight: 500;
-                        line-height: 1.5rem;
-                        width: 55%;
-                        padding: 0.9rem 2rem;
-                        background: #0070ff;
-                        min-width: 18rem;
-                        cursor: pointer;
-                      "
-                    >
-                      Confirm your email address
-                    </button>
+                  <a
+                    href="{link}"
+                    style="
+                      text-decoration: none;
+                      border: none;
+                      border-radius: 64px;
+                      font-size: 1.03rem;
+                      color: #ffffff;
+                      font-weight: 500;
+                      line-height: 1.5rem;
+                      width: 55%;
+                      padding: 1rem 3rem;
+                      background: #0070ff;
+                      min-width: 18rem;
+                    "
+                  >
+                    Confirm your email address
                   </a>
                 </td>
               </tr>
