chore: minore css

--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -33,6 +33,7 @@
                 text-align: center;
                 min-width: 55%;
                 margin: auto;
+                padding: 0 13px;
               "
             >
               <tr>
