chore: updated links and alt for imges

--- a/crates/router/src/services/email/assets/bizemailprod.html
+++ b/crates/router/src/services/email/assets/bizemailprod.html
@@ -144,19 +144,19 @@
               <tr>
                 <td>
                   <a
-                    href="https://www.linkedin.com/company/hyperswitch/"
+                    href="https://github.com/juspay/hyperswitch"
                     target="_blank"
                   >
                     <img
                       src="https://app.hyperswitch.io/email-assets/Github.png"
-                      alt="HyperSwitch"
+                      alt="Github"
                       height="15"
                     />
                   </a>
                   <a href="https://x.com/hyperswitchio?s=21" target="_blank">
                     <img
                       src="https://app.hyperswitch.io/email-assets/Twitter.png"
-                      alt="HyperSwitch"
+                      alt="Twitter"
                     />
                   </a>
                   <a
@@ -165,7 +165,7 @@
                   >
                     <img
                       src="https://app.hyperswitch.io/email-assets/LinkedIn.png"
-                      alt="HyperSwitch"
+                      alt="LinkedIn"
                       height="15"
                     />
                   </a>
