chore: updated logo and footer text

--- a/crates/router/src/services/email/assets/recon_activation.html
+++ b/crates/router/src/services/email/assets/recon_activation.html
@@ -44,7 +44,7 @@
                     <tr>
                       <td style="text-align: center">
                         <img
-                          src="https://app.hyperswitch.io/email-assets/HyperswitchLogoAndText.png"
+                          src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
                           alt="HyperSwitch"
                           style="
                             text-align: center;
@@ -148,15 +148,8 @@
                     color: #111326b2;
                   "
                 >
-                  Head to the
-                  <span style="text-decoration: underline; font-weight: 700"
-                    >Help Center</span
-                  >
-                  to get the help you need.
+                  Follow us on
                 </td>
-              </tr>
-              <tr>
-                <td style="height: 6px"></td>
               </tr>
               <tr>
                 <td>
