--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -45,7 +45,7 @@
                     <tr>
                       <td style="text-align: center">
                         <img
-                          src="https://app.hyperswitch.io/email-assets/HyperswitchLogoAndText.png"
+                          src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
                           alt="HyperSwitch"
                           style="
                             text-align: center;
@@ -130,7 +130,7 @@
                 </td>
               </tr>
               <tr>
-                <td style="height: 80px"></td>
+                <td style="height: 70px"></td>
               </tr>
               <tr>
                 <td
@@ -141,15 +141,8 @@
                     color: #111326b2;
                   "
                 >
-                  Head to the
-                  <span style="text-decoration: underline; font-weight: 700"
-                    >Help Center</span
-                  >
-                  to get the help you need.
+                  Follow us on
                 </td>
-              </tr>
-              <tr>
-                <td style="height: 6px"></td>
               </tr>
               <tr>
                 <td>
