--- a/crates/router/src/services/email/assets/api_key_expiry_reminder.html
+++ b/crates/router/src/services/email/assets/api_key_expiry_reminder.html
@@ -140,6 +140,7 @@
                     <img
                       src="https://app.hyperswitch.io/email-assets/Twitter.png"
                       alt="Twitter"
+                      height="15"
                     />
                   </a>
                   <a
