--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -160,6 +160,7 @@
                     <img
                       src="https://app.hyperswitch.io/email-assets/Twitter.png"
                       alt="Twitter"
+                      height="15"
                     />
                   </a>
                   <a
