--- a/crates/router/src/services/email/assets/bizemailprod.html
+++ b/crates/router/src/services/email/assets/bizemailprod.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Welcome to HyperSwitch!</title>
+    <title>Welcome to Hyperswitch!</title>
   </head>
   <body
     style="
@@ -45,7 +45,7 @@
                       <td style="text-align: center">
                         <img
                           src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
-                          alt="HyperSwitch"
+                          alt="Hyperswitch"
                           style="
                             text-align: center;
                             height: 1.3rem;
