--- a/crates/router/src/services/email/assets/invite.html
+++ b/crates/router/src/services/email/assets/invite.html
@@ -45,7 +45,7 @@
                       <td style="text-align: center">
                         <img
                           src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
-                          alt="HyperSwitch"
+                          alt="Hyperswitch"
                           style="
                             text-align: center;
                             height: 1.3rem;
@@ -70,7 +70,7 @@
                     min-width: 550px;
                   "
                 >
-                  Welcome to HyperSwitch!
+                  Welcome to Hyperswitch!
                 </td>
               </tr>
               <tr>
@@ -97,7 +97,7 @@
                   >
                     <tr>
                       <td>
-                        Hi {username}, You have received this email because your
+                        Hi {username}, you have received this email because your
                         administrator has invited you as a new user on
                         Hyperswitch.
                       </td>
