--- a/crates/router/src/services/email/assets/magic_link.html
+++ b/crates/router/src/services/email/assets/magic_link.html
@@ -45,7 +45,7 @@
                       <td style="text-align: center">
                         <img
                           src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
-                          alt="HyperSwitch"
+                          alt="Hyperswitch"
                           style="
                             text-align: center;
                             height: 1.3rem;
@@ -70,7 +70,7 @@
                     min-width: 550px;
                   "
                 >
-                  Welcome to HyperSwitch!
+                  Welcome to Hyperswitch!
                 </td>
               </tr>
               <tr>
@@ -97,7 +97,7 @@
                   >
                     <tr>
                       <td>
-                        Dear {username}, We are thrilled to welcome you into our
+                        Dear {username}, we are thrilled to welcome you into our
                         community!
                       </td>
                     </tr>
@@ -155,7 +155,7 @@
                   >
                     <tr>
                       <td>
-                        This link provides instant access to hyperswitch
+                        This link provides instant access to Hyperswitch
                         account. It will expire in 24 hours and can only be used
                         once.
                       </td>
