--- a/crates/router/src/services/email/assets/recon_activation.html
+++ b/crates/router/src/services/email/assets/recon_activation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Access Granted to HyperSwitch Recon Dashboard!</title>
+    <title>Access Granted to Hyperswitch Recon Dashboard!</title>
   </head>
   <body
     style="
@@ -45,7 +45,7 @@
                       <td style="text-align: center">
                         <img
                           src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
-                          alt="HyperSwitch"
+                          alt="Hyperswitch"
                           style="
                             text-align: center;
                             height: 1.3rem;
@@ -90,7 +90,7 @@
                     text-align: center;
                   "
                 >
-                  Access Granted to HyperSwitch Recon Dashboard!
+                  Access Granted to Hyperswitch Recon Dashboard!
                 </td>
               </tr>
                     <tr>
@@ -111,7 +111,7 @@
                             <a href="https://app.hyperswitch.io/">Hyperswitch Dashboard</a>.
                             </li>
                             <li>Click on the "Login" button.</li>
-                            <li>Enter your login credentials to log in.</li>
+                            <li>Enter your login credentials.</li>
                             <li>
                             Once logged in, you will have full access to the Recon dashboard,
                             where you can explore its comprehensive features.
