--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -46,7 +46,7 @@
                       <td style="text-align: center">
                         <img
                           src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
-                          alt="HyperSwitch"
+                          alt="Hyperswitch"
                           style="
                             text-align: center;
                             height: 1.3rem;
@@ -71,7 +71,7 @@
                     min-width: 500px;
                   "
                 >
-                  Thanks for signing up with HyperSwitch!
+                  Thanks for signing up with Hyperswitch!
                 </td>
               </tr>
               <tr>
