--- a/crates/router/src/services/email/assets/reset.html
+++ b/crates/router/src/services/email/assets/reset.html
@@ -45,7 +45,7 @@
                       <td style="text-align: center">
                         <img
                           src="https://app.hyperswitch.io/email-assets/HyperswitchLogo.png"
-                          alt="HyperSwitch"
+                          alt="Hyperswitch"
                           style="
                             text-align: center;
                             height: 1.3rem;
