feat(payout_link): add expired and status pages

--- a/crates/router/src/core/generic_link/expired_link/index.html
+++ b/crates/router/src/core/generic_link/expired_link/index.html
@@ -3,17 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Link Expired!</title>
-    <style>
-      .main {
-        background-color: "{{ theme }}";
-      }
-    </style>
+    <title>{{ title }}</title>
   </head>
   <body>
-    <div class="main">
-      <div class="heading">{{ title }}</div>
-      <div class="message">{{ message }}</div>
-    </div>
+    <div class="message">{{ message }}</div>
   </body>
 </html>
