--- a/crates/router/src/core/generic_link/payout_link/status/index.html
+++ b/crates/router/src/core/generic_link/payout_link/status/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collected!</title>
+    <title>Payout Status</title>
     {{ css_style_tag }}
   </head>
   <body>
-    <div class="main"></div>
+    <div class="main">
+      <div id="status-card">
+        <div id="merchant-header"></div>
+      </div>
+      <div id="redirect-text"></div>
+    </div>
     {{ js_script_tag }}
   </body>
 </html>
