fix: email template minor fix

--- a/crates/router/src/services/email/assets/reset.html
+++ b/crates/router/src/services/email/assets/reset.html
@@ -177,7 +177,7 @@
                 </td>
               </tr>
               <tr>
-                <td>
+                <td style="font-size: 0">
                   <a
                     href="https://github.com/juspay/hyperswitch"
                     target="_blank"
