--- a/crates/router/src/services/email/assets/api_key_expiry_reminder.html
+++ b/crates/router/src/services/email/assets/api_key_expiry_reminder.html
@@ -125,7 +125,7 @@
                 </td>
               </tr>
               <tr>
-                <td>
+                <td style="font-size: 0">
                   <a
                     href="https://github.com/juspay/hyperswitch"
                     target="_blank"
