--- a/crates/router/src/services/email/assets/magic_link.html
+++ b/crates/router/src/services/email/assets/magic_link.html
@@ -179,7 +179,7 @@
                 </td>
               </tr>
               <tr>
-                <td>
+                <td style="font-size: 0">
                   <a
                     href="https://github.com/juspay/hyperswitch"
                     target="_blank"
