feat(payment_link): add provision for secured payment links refactor(payment_link): segregate open and secured payment links

--- a/crates/router/src/core/payment_link/payment_link_initiate/payment_link.html
+++ b/crates/router/src/core/payment_link/payment_link_initiate/payment_link.html
@@ -324,6 +324,7 @@
     </div>
     <script>
       {{rendered_js}}
+      {{payment_link_initiator}}
       {{logging_template}}
     </script>
     {{ hyperloader_sdk_link }}
