chore: email templates footer icon style enhance

--- a/crates/router/src/services/email/assets/recon_activation.html
+++ b/crates/router/src/services/email/assets/recon_activation.html
@@ -156,6 +156,7 @@
                   <a
                     href="https://github.com/juspay/hyperswitch"
                     target="_blank"
+                    style="margin: 0 1px 0"
                   >
                     <img
                       src="https://app.hyperswitch.io/email-assets/Github.png"
@@ -163,7 +164,7 @@
                       height="15"
                     />
                   </a>
-                  <a href="https://x.com/hyperswitchio?s=21" target="_blank">
+                  <a href="https://x.com/hyperswitchio?s=21" target="_blank" style="margin: 0 4px 0">
                     <img
                       src="https://app.hyperswitch.io/email-assets/Twitter.png"
                       alt="Twitter"
@@ -173,6 +174,7 @@
                   <a
                     href="https://www.linkedin.com/company/hyperswitch/"
                     target="_blank"
+                    style="margin: 0 1px 0"
                   >
                     <img
                       src="https://app.hyperswitch.io/email-assets/Linkedin-Dark.png"
