--- a/crates/router/src/services/email/assets/reset.html
+++ b/crates/router/src/services/email/assets/reset.html
@@ -181,6 +181,7 @@
                   <a
                     href="https://github.com/juspay/hyperswitch"
                     target="_blank"
+                    style="margin: 0 1px 0"
                   >
                     <img
                       src="https://app.hyperswitch.io/email-assets/Github.png"
@@ -188,7 +189,11 @@
                       height="15"
                     />
                   </a>
-                  <a href="https://x.com/hyperswitchio?s=21" target="_blank">
+                  <a
+                    href="https://x.com/hyperswitchio?s=21"
+                    target="_blank"
+                    style="margin: 0 4px 0"
+                  >
                     <img
                       src="https://app.hyperswitch.io/email-assets/Twitter.png"
                       alt="Twitter"
@@ -198,6 +203,7 @@
                   <a
                     href="https://www.linkedin.com/company/hyperswitch/"
                     target="_blank"
+                    style="margin: 0 1px 0"
                   >
                     <img
                       src="https://app.hyperswitch.io/email-assets/Linkedin-Dark.png"
