--- a/crates/router/src/services/email/assets/verify.html
+++ b/crates/router/src/services/email/assets/verify.html
@@ -156,7 +156,11 @@
                       height="15"
                     />
                   </a>
-                  <a href="https://x.com/hyperswitchio?s=21" target="_blank">
+                  <a
+                    href="https://x.com/hyperswitchio?s=21"
+                    target="_blank"
+                    style="margin: 0 6px 0"
+                  >
                     <img
                       src="https://app.hyperswitch.io/email-assets/Twitter.png"
                       alt="Twitter"
